--- a/app.yaml
+++ b/app.yaml
@@ -4,7 +4,7 @@ handlers:
   # This configures Google App Engine to serve the files in the app's static
   # directory.
 - url: /$
-  static_dir: static/index.html
+  static_files: static/index.html
 
 - url: /static
   static_dir: static
