--- a/app.yaml
+++ b/app.yaml
@@ -3,8 +3,9 @@ runtime: python38
 handlers:
   # This configures Google App Engine to serve the files in the app's static
   # directory.
-- url: /$
+- url: /
   static_files: static/index.html
+  upload: static/index.html
 
 - url: /static
   static_dir: static
