--- a/static/config.json
+++ b/static/config.json
@@ -2,34 +2,20 @@
     "v": "1",
     "user": {
         "name": "",
-        "location": "",
+        "birthday": "",
         "language": "ES",
-        "layout": "",
-        "background": "",
-        "theme": ""
     },
-    "widgets": {
-        "welcome": true,
-        "clock": true,
-        "sun": true,
-        "holidays":true,
-        "stations":true
+    "settings" : {
+        "layouts": ["welcome", "nextweeks"],
+        "theme": "",
+        "backgroundImage": null
     },
-    "events": [],
-    "holidays": [
+    "events": [
         {
-            "day": "2020-07-09 01:00",
-            "motive": "Día de la independencia"
-        },
-        {
-            "day": "2020-07-10 01:00",
-            "motive": "Puente turistico"
-        }
-    ],
-    "birthdays": [
-        {
-            "day": "2020-07-14 01:00",
-            "name": "Pepe"
+            "day": "2020-08-25 01:00",
+            "description": "Data Engineer",
+            "holiday": true,
+            "color": "black"
         }
     ]
 }
