--- a/timetab/package.json
+++ b/timetab/package.json
@@ -15,9 +15,12 @@
     "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-geolocated": "^3.1.0",
     "react-i18next": "^11.8.10",
+    "react-modal": "^3.12.1",
     "react-moment": "^1.1.1",
     "react-scripts": "4.0.3",
+    "store": "^2.0.12",
     "suncalc": "^1.8.0",
     "web-vitals": "^1.1.1"
   },
