--- a/timetab/package.json
+++ b/timetab/package.json
@@ -13,6 +13,7 @@
     "i18next-http-backend": "^1.1.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
+    "moment-timezone": "^0.5.33",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-geolocated": "^3.1.0",
