--- a/timetab/public/app.yaml
+++ b/timetab/public/app.yaml
@@ -4,11 +4,8 @@ handlers:
   # This configures Google App Engine to serve the files in the app's static
   # directory.
 - url: /
-  static_files: static/index.html
-  upload: static/index.html
-
-- url: /static
-  static_dir: static
+  static_files: index.html
+  upload: index.html
 
   # This handler routes all requests not caught above to your main app. It is
   # required when static routes are defined, but can be omitted (along with
