--- a/timetab/package.json
+++ b/timetab/package.json
@@ -17,6 +17,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-geolocated": "^3.1.0",
+    "react-gtm-module": "^2.0.11",
     "react-i18next": "^11.8.10",
     "react-modal": "^3.12.1",
     "react-moment": "^1.1.1",
